Wird nicht messer, nur anders.

--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -96,18 +96,35 @@
         <profile>
             <id>h2</id>
             <dependencies>
-                <dependency>
+                <!--dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-core</artifactId>
+
+                </dependency-->
+
+                <!--dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-entitymanager</artifactId>
+                    <scope>provided</scope>
+                </dependency-->
+                <!--dependency>
+                    <groupId>dom4j</groupId>
+                    <artifactId>dom4j</artifactId>
+                    <version>1.6</version>
+                </dependency-->
+
+                <!--dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-entitymanager</artifactId>
                     <scope>provided</scope>
                     <version>${hibernate.version}</version>
-                </dependency>
+                </dependency-->
 
-                <dependency>
+                <!--dependency>
                     <groupId>com.h2database</groupId>
                     <artifactId>h2</artifactId>
                     <version>${h2.version}</version>
-                </dependency>
+                </dependency-->
 
                 <dependency>
                     <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
