--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -196,14 +196,7 @@
 
     <reporting>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.18.1</version>
-                <configuration>
-                    <outputName>Unit Tests</outputName>
-                </configuration>
-            </plugin>
+
         </plugins>
     </reporting>
 
@@ -222,12 +215,18 @@
                 </build>
                 <dependencies>
 
-                <dependency>
+                    <dependency>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-core</artifactId>
+                        <scope>provided</scope>
+                    </dependency>
+
+                <!--dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-entitymanager</artifactId>
-                    <scope>test</scope>
+                    <scope>provided</scope>
                     <version>${hibernate.version}</version>
-                </dependency>
+                </dependency-->
 
                 <dependency>
                     <groupId>com.h2database</groupId>
