--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -67,13 +67,16 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.3.11.Final</version>
-            <scope>test</scope>
-            <!-- <version>5.0.7.Final</version> -->
-        </dependency>
+            <scope>provided</scope>
+        </dependency-->
+        <!--dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <scope>provided</scope>
+        </dependency-->
 
         <!-- Erforderlich für CDI Annotationen in der Domäne -->
 
@@ -140,6 +143,17 @@
             <scope>test</scope>
         </dependency>
 
+         <dependency>
+            <groupId>org.jboss.spec.javax.annotation</groupId>
+            <artifactId>jboss-annotations-api_1.2_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
