--- a/dominium-persistenz-jpa/pom.xml
+++ b/dominium-persistenz-jpa/pom.xml
@@ -135,12 +135,12 @@
                     <scope>test</scope>
                 </dependency>
 
-                <!--dependency>
+                <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-entitymanager</artifactId>
                     <version>${hibernate.version}</version>
                     <scope>provided</scope>
-                </dependency-->
+                </dependency>
                 <!--dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-core</artifactId>
