--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -69,11 +69,6 @@
 
         <!--dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <scope>provided</scope>
-        </dependency-->
-        <!--dependency>
-            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <scope>provided</scope>
         </dependency-->
@@ -197,6 +192,20 @@
                 <version>${h2.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>javax.transaction</groupId>
+                <artifactId>jta</artifactId>
+                <version>1.1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
         </profile>
         <profile>
