--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -187,6 +187,14 @@
             </dependency>
 
             <dependency>
+                <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                <artifactId>dominium-persistenz-jpa</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <scope>test</scope>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
