--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@
             <dependency>
                 <groupId>nl.jqno.equalsverifier</groupId>
                 <artifactId>equalsverifier</artifactId>
-                <version>1.7.5</version>
+                <version>2.0.2</version>
                 <scope>test</scope>
             </dependency>
 
@@ -364,6 +364,7 @@
                     <version>1.8</version>
                     <executions>
                         <execution>
+                            <phase>process-sources</phase>
                             <goals>
                                 <goal>compile</goal>
                                 <goal>test-compile</goal>
@@ -371,10 +372,19 @@
                         </execution>
                     </executions>
                     <configuration>
+                        <showWeaveInfo>true</showWeaveInfo>
+
                         <complianceLevel>1.8</complianceLevel>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
                     </configuration>
+                    <dependencies>
+                            <dependency>
+                                <groupId>org.aspectj</groupId>
+                                <artifactId>aspectjtools</artifactId>
+                                <version>1.8.9</version>
+                            </dependency>
+                    </dependencies>
                 </plugin>
 
                 <!-- gmavenplus (für Tests mit Spock-Framework -->
@@ -484,6 +494,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <useIncrementalCompilation>false</useIncrementalCompilation>
+                </configuration>
             </plugin>
 
             <plugin>
