--- a/coding/parent/pom.xml
+++ b/coding/parent/pom.xml
@@ -14,6 +14,7 @@
     <name>${project.artifactId}-${project.version}</name>
 
     <modules>
+        <module>mojo</module>
         <module>richtlinien</module>
         <module>aspekte</module>
     </modules>
@@ -23,7 +24,14 @@
         <pluginManagement>
 
             <plugins>
-
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <configuration>
+                        <useIncrementalCompilation>false</useIncrementalCompilation>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
