--- a/dominium-persistenz-jpa/pom.xml
+++ b/dominium-persistenz-jpa/pom.xml
@@ -38,6 +38,17 @@
             <artifactId>equalsverifier</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <classifier>${groovy.classifier}</classifier>
+        </dependency>
+
         <!-- Erforderlich für CDI Annotationen in der Domäne -->
         <!-- Import the CDI API, we use provided scope as the API is included in WildFly -->
         <dependency>
