--- a/dominium/pom.xml
+++ b/dominium/pom.xml
@@ -42,6 +42,17 @@
             <artifactId>equalsverifier</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <classifier>${groovy.classifier}</classifier>
+        </dependency>
+
         <!-- compile -->
         <dependency>
             <groupId>org.apache.commons</groupId>
