--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.version>3.5.1</maven.compiler.version>
 
+        <maven.enforcer.version>1.4.1</maven.enforcer.version>
         <!-- Benutze die selbe Checkstype Version, wie das IntelliJ Plugin ! -->
         <checkstyle.version>6.14.1</checkstyle.version>
 
@@ -33,19 +34,18 @@
 
         <slf4j.version>1.7.13</slf4j.version>
         <junit.version>4.12</junit.version>
-        <oleaster.version>0.1.2</oleaster.version>
+        <oleaster.version>0.1.3-SNAPSHOT</oleaster.version>
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
         <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
         <aspectj.version>1.8.9</aspectj.version>
 
         <skipTests>false</skipTests>
+        <groovy.version>2.4.5</groovy.version>
+        <groovy.classifier>indy</groovy.classifier>
 
         <h2.version>1.4.191</h2.version>
         <hibernate.version>5.0.7.Final</hibernate.version>
         <version.jboss.bom>10.0.0.Final</version.jboss.bom>
-
-        <unwoven-classes.directory>${project.build.directory}/unwoven-classes</unwoven-classes.directory>
-        <unwoven-test-classes.directory>${project.build.directory}/unwoven-test-classes</unwoven-test-classes.directory>
     </properties>
 
     <scm>
@@ -134,23 +134,39 @@
 
             <!-- auslagern nach test.bom -->
             <dependency>
+                <groupId>org.spockframework</groupId>
+                <artifactId>spock-core</artifactId>
+                <version>1.0-groovy-2.4</version>
+                <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>groovy-all</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <!-- Spock: zum Mocken erforderlich -->
+            <!-- auslagern nach test.bom -->
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib-nodep</artifactId>
+                <version>3.2.0</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+                <version>${groovy.version}</version>
+                <classifier>${groovy.classifier}</classifier>
+            </dependency>
+
+            <!-- auslagern nach test.bom -->
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.mscharhag.oleaster</groupId>
-                <artifactId>oleaster-runner</artifactId>
-                <version>${oleaster.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.mscharhag.oleaster</groupId>
-                <artifactId>oleaster-matcher</artifactId>
-                <version>${oleaster.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -167,6 +183,20 @@
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-junit</artifactId>
                 <version>1.2.4</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.mscharhag.oleaster</groupId>
+                <artifactId>oleaster-runner</artifactId>
+                <version>${oleaster.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.mscharhag.oleaster</groupId>
+                <artifactId>oleaster-matcher</artifactId>
+                <version>${oleaster.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -349,11 +379,6 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>de.therapeutenkiller</groupId>
-                    <artifactId>mojo</artifactId>
-                    <version>${version.de.therapeutenkiller.coding}</version>
-                </plugin>
-                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven.compiler.version}</version>
@@ -370,6 +395,35 @@
                     <version>1.8</version>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>${maven.enforcer.version}</version>
+                </plugin>
+                <!-- gmavenplus (für Tests mit Spock-Framework -->
+
+                <plugin>
+                    <groupId>org.codehaus.gmavenplus</groupId>
+                    <artifactId>gmavenplus-plugin</artifactId>
+                    <version>1.5</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>compile</goal>
+                                <goal>testCompile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <targetBytecode>1.8</targetBytecode>
+                        <warningLevel>2</warningLevel>
+                        <invokeDynamic>true</invokeDynamic>
+                        <detail>true</detail>
+                        <testOutputDirectory>${unwoven-classes.directory}</testOutputDirectory>
+                        <outputDirectory>${unwoven-test-classes.directory}</outputDirectory>
+                        <debug>true</debug>
+                    </configuration>
+                </plugin>
                 <!-- checkstyle -->
                 <!-- TODO: auslagern nach test.bom -->
                 <plugin>
@@ -448,31 +502,50 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-versions</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>[3.3,)</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <!-- Die Reihenfolge der Plugins ist wichtig und darf nicht geändert werden:
+                     1. Compiler und Annotation Processing
+                     2. Groovy
+                     3. AspectJ
+                -->
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>default-compile</id>
                         <phase>compile</phase>
-
-                        <configuration>
-
-                            <compilerArguments>
-                                <d>${unwoven-classes.directory}</d>
-                            </compilerArguments>
-                        </configuration>
                     </execution>
                     <execution>
                         <id>default-testCompile</id>
                         <phase>test-compile</phase>
-                        <configuration>
-                            <compilerArguments>
-                                <d>${unwoven-test-classes.directory}</d>
-                            </compilerArguments>
-                        </configuration>
                     </execution>
-                </executions >
-
+                </executions>
             </plugin>
+
+            <!-- gmavenplus (für Tests mit Spock-Framework) -->
+            <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+            </plugin>
+
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -500,42 +573,42 @@
                 <executions>
                     <execution>
                         <id>weave-classes</id>
-                        <phase>process-classes</phase>
+                        <phase>compile</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
                         <configuration>
                             <proc>none</proc>
+                            <!-- WICHTIG -->
                             <sources/>
                             <weaveDirectories>
-                                <weaveDirectory>${unwoven-classes.directory}</weaveDirectory>
+                                <weaveDirectory>${build.outputDirectory}</weaveDirectory>
                             </weaveDirectories>
-                            <Xreweavable>false</Xreweavable>
                         </configuration>
                     </execution>
                     <execution>
                         <id>weave-test-classes</id>
-                        <phase>process-test-classes</phase>
+                        <phase>test-compile</phase>
                         <goals>
                             <goal>test-compile</goal>
                         </goals>
                         <configuration>
                             <proc>none</proc>
+                            <!-- WICHTIG -->
                             <testSources/>
                             <weaveDirectories>
-                                <weaveDirectory>${unwoven-test-classes.directory}</weaveDirectory>
+                                <weaveDirectory>${build.testOutputDirectory}</weaveDirectory>
                             </weaveDirectories>
-                            <Xreweavable>true</Xreweavable>
                         </configuration>
                     </execution>
                 </executions>
 
                 <dependencies>
-                    <!--dependency>
+                    <dependency>
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjtools</artifactId>
                         <version>${aspectj.version}</version>
-                    </dependency-->
+                    </dependency>
                     <dependency>
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjrt</artifactId>
@@ -549,18 +622,6 @@
                     </dependency-->
                 </dependencies>
 
-            </plugin>
-            <plugin>
-                <groupId>de.therapeutenkiller</groupId>
-                <artifactId>mojo</artifactId>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>create-directories</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
