--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -82,6 +82,17 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <classifier>${groovy.classifier}</classifier>
+        </dependency>
+
         <!-- Erforderlich für CDI Annotationen -->
         <dependency>
             <groupId>javax.enterprise</groupId>
