groupId geändert auf com.github.haschi; Bugfix NullReferenzPrüfung für synthetische Konstruktoren

--- a/coding/all/pom.xml
+++ b/coding/all/pom.xml
@@ -7,7 +7,7 @@
 
     <parent>
         <artifactId>coding</artifactId>
-        <groupId>de.therapeutenkiller</groupId>
+        <groupId>com.github.haschi</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
