--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>haushaltsbuch</artifactId>
-        <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+        <groupId>com.github.haschi.haushaltsbuch</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -15,12 +15,12 @@
     <dependencies>
 
         <dependency>
-            <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+            <groupId>com.github.haschi.haushaltsbuch</groupId>
             <artifactId>domaene</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+            <groupId>com.github.haschi.haushaltsbuch</groupId>
             <artifactId>dominium</artifactId>
         </dependency>
 
@@ -176,13 +176,13 @@
         </build>
         <dependencies>
             <dependency>
-                <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                <groupId>com.github.haschi.haushaltsbuch</groupId>
                 <artifactId>dominium-persistenz-jpa</artifactId>
                 <scope>compile</scope>
             </dependency>
 
             <dependency>
-                <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                <groupId>com.github.haschi.haushaltsbuch</groupId>
                 <artifactId>dominium-persistenz-jpa</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
                 <scope>test</scope>
@@ -215,7 +215,7 @@
             <id>event-store</id>
             <dependencies>
                 <dependency>
-                    <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                    <groupId>com.github.haschi.haushaltsbuch</groupId>
                     <artifactId>dominium-persistenz-atom</artifactId>
                 </dependency>
             </dependencies>
