--- a/coding/parent/richtlinien/pom.xml
+++ b/coding/parent/richtlinien/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <artifactId>parent</artifactId>
-        <groupId>de.therapeutenkiller</groupId>
+        <groupId>com.github.haschi</groupId>
         <version>0.0.26-SNAPSHOT</version>
     </parent>
 
