--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+        <groupId>com.github.haschi.haushaltsbuch</groupId>
         <artifactId>haushaltsbuch</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -29,17 +29,17 @@
     <dependencies>
 
         <dependency>
-            <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+            <groupId>com.github.haschi.haushaltsbuch</groupId>
             <artifactId>dominium</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+            <groupId>com.github.haschi.haushaltsbuch</groupId>
             <artifactId>dominium-persistenz-jpa</artifactId>
         </dependency>
         
         <dependency>
-            <groupId>de.therapeutenkiller</groupId>
+            <groupId>com.github.haschi</groupId>
             <artifactId>aspekte</artifactId>
         </dependency>
 
