--- a/pom.xml
+++ b/pom.xml
@@ -393,6 +393,7 @@
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
                         <useIncrementalCompilation>false</useIncrementalCompilation>
+                        <verbose>true</verbose>
                     </configuration>
                 </plugin>
 
