Akzeptanztests verschoben in Modul anwendung

--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>domaene</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.github.haschi.haushaltsbuch</groupId>
